# deep-research-framework

./: .env.example  .gitignore  Dockerfile  Dockerfile.renderer  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-18-deep-research-framework.md
docs/superpowers/specs/: 2026-03-18-deep-research-framework-design.md
projects/admapix/: config.yaml  output_prefs.yaml
projects/ecomseer/: config.yaml  output_prefs.yaml
projects/ecomseer/api_docs/: api-ad.md  api-goods.md  api-influencer.md  api-product-detail.md  api-shop.md  api-video.md
projects/example/: config.yaml  output_prefs.yaml
projects/example/api_docs/: example_api.yaml
src/: auth.py  config.py  main.py
src/api/: models.py  routes.py  streaming_routes.py
src/engine/: data_preparation.py  project_loader.py  prompt_builder.py  research.py  streaming_pipeline.py
src/engine/prompts/: data_collector.py  report_generator.py
src/memory/: store.py  updater.py
src/output/: renderer.py  uploader.py
src/task/: manager.py
tests/: conftest.py  test_auth.py  test_config.py  test_data_preparation.py  test_memory_store.py  test_memory_updater.py  test_models.py  test_project_loader.py  test_prompt_builder.py  test_prompt_builder_memory.py  test_renderer.py  test_research.py  test_routes.py  test_task_manager.py
