[project]
name = "deep-research-framework"
version = "0.1.0"
description = "Deep Research Service powered by OpenAI Deep Research API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.60.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
